@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.mymovies.it"
        name="MyMovies.it"
-       version="2.0.0"
+       version="2.0.1"
        provider-name="muttley">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
@@ -24,7 +24,7 @@ Riporta problemi o suggerimenti su:
 Buona visione!
 	</description>
     <description lang="en">
-Report problems or suggest on: 
+Report problems or suggests on: 
 - https://code.google.com/p/mymovies-xbmc-scraper
 - http://forum.xbmc.org/showthread.php?t=58141
 
