@@ -218,7 +218,7 @@
 	
 	<GetMovieTrailer dest="5">
 		<RegExp input="$$1" output="&lt;details&gt;&lt;trailer&gt;\1&lt;/trailer&gt;&lt;/details&gt;" dest="5">
-			<expression noclean="1">&apos;(http://[^&apos;\?]+trailer[^&apos;\?]*\.flv)</expression>
+			<expression noclean="1">[&apos;&quot;](http://[^&apos;&quot;]+trailer[^&apos;&quot;]*\.flv)[&apos;&quot;]</expression>
 		</RegExp>
 	</GetMovieTrailer>
 
