@@ -7,11 +7,11 @@
     <string id="30004">Filmmakers</string>
     <string id="30005">Separatori del Cast</string>
         
-    <string id="30100">Votazione (mymovies.it)</string>
+    <string id="30100">Voti</string>
     <string id="30101">In 10esimi</string>
     <string id="30102">Includi Dizionari, Critica e Pubblico (in outline)</string>
     
-    <string id="30200">Immagini e Video</string>
+    <string id="30200">Multimedia</string>
     <string id="30201">Tutti i Posters (lento)</string>
     <string id="30202">In Hi-Res</string>
     <string id="30203">Trailer (lento)</string>
